user_profile OK

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome <%= @username%></h1>
+<h1>Welcome <%= @user.username%></h1>
 <p>Here are your infos :</p>
-<p>Your email address : <%= @email%></p>
-<p>Your bio : <%= @bio%></p>
+<p>Your email address : <%= @user.email%></p>
+<p>Your bio : <%= @user.bio%></p>
+<p>To get back to this website's home, click <a href="<%= home_path%>">here</a>
