--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Sign Up</h1>
 <p>please fill in the following form</p>
+<!-- Méthode de formulaire HTML
 <form action="/create" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
   <p>Username :</p>
@@ -10,3 +11,22 @@
   <textarea name="bio" rows="4" cols="90"></textarea></br>
   <input type="submit" value="submit">
 </form>
+-->
+
+<%= form_tag url_for(action: 'create'), method: "post" do %>
+
+     <%= label_tag 'Username' %><br />
+     <%= text_field_tag 'username'%>
+     <br /> <br />
+
+     <%= label_tag 'Email' %><br />
+     <%= text_field_tag 'email'%>
+     <br /> <br />
+
+     <%= label_tag 'Bio' %><br />
+     <%= text_area_tag 'bio'%>
+     <br /> <br />
+
+     <%= submit_tag "Sign in" %>
+
+<% end %>
