--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,8 +11,9 @@
   <textarea name="bio" rows="4" cols="90"></textarea></br>
   <input type="submit" value="submit">
 </form>
--->
+--> 
 
+<!--
 <%= form_tag url_for(action: 'create'), method: "post" do %>
 
      <%= label_tag 'Username' %><br />
@@ -29,4 +30,17 @@
 
      <%= submit_tag "Sign in" %>
 
+<% end %>
+-->
+
+<!-- Méthode de formulaire form_tag -->
+<%= form_for @user, url: {action: 'create'} do |f| %>
+<p>Username:</p>
+  <%= f.text_field :username %>
+<p>Email: </p>
+  <%= f.text_field :email %>
+<p>Bio:</p>
+  <%= f.text_area :bio, size: "60x12" %>
+</br>
+  <%= f.submit "Create" %>
 <% end %>
