--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,48 @@
 <center>
 <h1>Sign Up</h1>
 <p>please fill in the following form</p>
-<!-- Méthode de formulaire HTML
+<!-- Méthode de formulaire HTML -->
 <form action="/create" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
-  <p>Username :</p>
-  <input type="string" name="username">
-  <p>Email :</p>
-  <input type="string" name="email">
-  <p>Your bio :</p>
-  <textarea name="bio" rows="4" cols="90"></textarea></br>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="formGroupExampleInput">Username</label>
+      <input type="string" name="username" class="form-control" id="formGroupExampleInput" placeholder="Toto">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="formGroupExampleInput">Email address</label>
+      <input type="string" name="email" class="form-control" id="formGroupExampleInput" placeholder="toto@mail.mail">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput">Biography</label>
+    <textarea name="bio" class="form-control" id="formGroupExampleInput2" placeholder="Say whatever you want"></textarea></br>
+  </div>
   <input type="submit" value="submit">
 </form>
--->
+
 
 <!-- Méthode de formulaire form_tag
 <%= form_tag url_for(action: 'create'), method: "post" do %>
-     <%= label_tag 'Username' %><br />
-     <%= text_field_tag 'username'%>
-     <br /> <br />
-     <%= label_tag 'Email' %><br />
-     <%= text_field_tag 'email'%>
-     <br /> <br />
-     <%= label_tag 'Bio' %><br />
-     <%= text_area_tag 'bio'%>
-     <br /> <br />
-     <%= submit_tag "Sign in" %>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="formGroupExampleInput"<%= label_tag 'Username' %>
+      <input class="form-control" id="formGroupExampleInput" placeholder="Toto" <%= text_field_tag 'username' %>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="formGroupExampleInput"<%= label_tag 'Email' %>
+      <input class="form-control" id="formGroupExampleInput" placeholder="toto@mail.mail" <%= text_field_tag 'email'%>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput"<%= label_tag 'Bio' %>
+    <textarea name="bio" class="form-control" id="formGroupExampleInput2" placeholder="Say whatever you want" <%= text_area_tag 'bio'%>
+    </div>
+  <%= submit_tag "Sign in" %>
 <% end %>
 -->
 
-<!-- Méthode formulaire form_for-->
+<!-- Méthode formulaire form_for
 <%= form_for @user, url: {action: 'create'} do |f| %>
 <p>Username:</p>
   <%= f.text_field :username %>
@@ -40,4 +53,5 @@
 </br>
   <%= f.submit "Create" %>
 <% end %>
+-->
 </center>
