--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <center>
 <h1>Sign Up</h1>
 <p>please fill in the following form</p>
-<!-- Méthode de formulaire HTML -->
+<!-- Méthode de formulaire HTML
 <form action="/create" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
   <div class="form-row">
@@ -20,8 +20,8 @@
   </div>
   <input type="submit" value="submit">
 </form>
-
-
+<div class="form-group">
+-->
 <!-- Méthode de formulaire form_tag
 <%= form_tag url_for(action: 'create'), method: "post" do %>
   <div class="form-row">
@@ -42,16 +42,23 @@
 <% end %>
 -->
 
-<!-- Méthode formulaire form_for
+<!-- Méthode formulaire form_for-->
 <%= form_for @user, url: {action: 'create'} do |f| %>
-<p>Username:</p>
-  <%= f.text_field :username %>
-<p>Email: </p>
-  <%= f.text_field :email %>
-<p>Bio:</p>
-  <%= f.text_area :bio, size: "60x12" %>
-</br>
-  <%= f.submit "Create" %>
+<div class="form-row">
+  <div class="form-group col-md-6">
+    <label for="formGroupExampleInput">Username</label>
+    <input class="form-control" id="formGroupExampleInput" placeholder="Toto" <%= f.text_field :username %>
+  </div>
+  <div class="form-group col-md-6">
+    <label for="formGroupExampleInput">Email address</label>
+    <input class="form-control" id="formGroupExampleInput" placeholder="toto@mail.mail" <%= f.text_field :email %>
+  </div>
+</div>
+<div class="form-group">
+  <label for="formGroupExampleInput">Biography</label>
+  <textarea name="bio" class="form-control" id="formGroupExampleInput2" placeholder="Say whatever you want" <%= f.text_area :bio, size: "60x12" %>
+</div>
+<%= f.submit "Create" %>
 <% end %>
--->
+
 </center>
