--- a/app/views/users/error.html.erb
+++ b/app/views/users/error.html.erb
@@ -1,2 +1,6 @@
-<h1>Invalid username or email</h1>
-<p><a href="<%=new_user_path%>">Try again !</a></p>
+<div class="position-absolute">
+	<br>
+	<div class="alert alert-danger" role="alert">
+  	Invalid informations ! <a href="<%=new_user_path%>" class="alert-link">Try again !</a>
+	</div>
+</div>
