modified page styles

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to this website !</h1>
-<p>To create a new profile, click <a href="<%=new_user_path%>">here<a></p>
+<center>
+  <br />
+  <h1>Welcome to this website !</h1>
+  <br />
+  <div>
+    To create a new profile, click <a href="<%=new_user_path%>">here<a>
+  </div>
+</center>
