--- a/app/views/users/error.html.erb
+++ b/app/views/users/error.html.erb
@@ -1,6 +1,6 @@
-<div class="position-absolute">
-	<br>
-	<div class="alert alert-danger" role="alert">
-  	Invalid informations ! <a href="<%=new_user_path%>" class="alert-link">Try again !</a>
-	</div>
-</div>
+<center>
+  <br />
+  <div class="alert alert-danger" role="alert">
+    Invalid informations ! <a href="<%=new_user_path%>" class="alert-link">Try again !</a>
+  </div>
+</center>
