--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,5 +1,8 @@
+<center>
+  <br />
 <h1>Welcome <%= @user.username%></h1>
-<p>Here are your infos :</p>
+<br />
 <p>Your email address : <%= @user.email%></p>
 <p>Your bio : <%= @user.bio%></p>
 <p>To get back to this website's home, click <a href="<%= home_path%>">here</a>
+</center>
