--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -56,7 +56,7 @@
 </div>
 <div class="form-group">
   <label for="formGroupExampleInput">Biography</label>
-  <textarea name="bio" class="form-control" id="formGroupExampleInput2" placeholder="Say whatever you want" <%= f.text_area :bio, size: "60x12" %>
+  <textarea class="form-control" id="formGroupExampleInput2" placeholder="Say whatever you want" <%= f.text_area :bio, size: "60x12" %>
 </div>
 <%= f.submit "Create" %>
 <% end %>
